--- a/index.html
+++ b/index.html
@@ -85,6 +85,39 @@
                 <div class="subtitle-div">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                      <p class="team-text">Product Designer</p>
+                </div>
+                <div>
+                     <ul class="our-team-item">
+                        <li class="our-team-item-icons">
+                            <a class="team-link" href="icon-instagram">
+                          <svg class="team-icons" widht="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                          </svg>
+                        </a>
+                        </li>
+                    <li class="our-team-item-icons">
+                        <a class="team-link" href="icon-twitter">
+                            <svg class="team-icons" widht="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="our-team-item-icons">
+                        <a class="team-link" href="icon-facebook">
+                            <svg class="team-icons" widht="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="our-team-item-icons">
+                        <a class="team-link" href="icon-linkedin">
+                            <svg class="team-icons" widht="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                        </ul>
                     </div>
                     </li>
            
