--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             <h2 class="visually-hidden"></h2>
            <ul class="caracteristic-list">
             <li class="caracteristic-item">
+             <div class="conteiner-icon">
+                <svg class="caracteristic-icon" width="64" height="64" >
+                    <use href="./images/icons.svg#icon-Group"></use>
+                </svg>
+                </div>
                 <h3 class="caracteristic-subtitle">Strategy</h3>
                 <p class="caracteristic-item-title">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.</p>
