--- a/index.html
+++ b/index.html
@@ -64,14 +64,29 @@
                 problem to walk away with the perfect and creative solution.</p>
             </li>
             <li class="caracteristic-item">
+                <div class="conteiner-icon">
+                    <svg class="caracteristic-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-clock"></use>
+                    </svg>
+                </div>
                 <h3 class="caracteristic-subtitle">Punctuality</h3>
                 <p class="caracteristic-item-title">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li class="caracteristic-item">
+                <div class="conteiner-icon">
+                    <svg class="caracteristic-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-diagram"></use>
+                    </svg>
+                </div>
                 <h3 class="caracteristic-subtitle">Diligence</h3>
                 <p class="caracteristic-item-title">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li class="caracteristic-item">
+                <div class="conteiner-icon">
+                    <svg class="caracteristic-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-astronaut"></use>
+                    </svg>
+                </div>
                 <h3 class="caracteristic-subtitle">Technologies</h3>
                 <p class="caracteristic-item-title">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
