--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
-                    </li>
+                    </li>щз
                     <li class="our-team-item-icons">
                         <a class="team-link" href="icon-facebook">
                             <svg class="team-icons" widht="16" height="16">
@@ -268,9 +268,13 @@
     <ul class="portfolio-list">
         
         <li class="portfolio-item">
+            <div class="image-div">
             <img src="./images/img1.jpg" 
             alt="Banking-App" 
             width="360" class="portfolio-images">
+            <p class="portfolio-paragraf-div">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+            Cloud Storage App</p>
+            </div>
             <div class="portfolio-item-div">
             <h3 class="portfolio-subtitle">Banking App</h3>
             <p class="portfolio-text">App</p>
