--- a/index.html
+++ b/index.html
@@ -282,45 +282,70 @@
         </li>
         
         <li class="portfolio-item">
+            <div class="image-div">
             <img src="./images/img2.jpg" 
             alt="Cashless-Payment" 
             width="360" class="portfolio-images">
+            <p class="portfolio-paragraf-div">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="portfolio-item-div">
             <h3 class="portfolio-subtitle">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
         </div>
         </li>
         <li class="portfolio-item">
+            <div class="image-div">
             <img src="./images/img3.jpg" 
             alt="Meditation-App" 
             width="360" class="portfolio-images">
+            <p class="portfolio-paragraf-div">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="portfolio-item-div">
             <h3 class="portfolio-subtitle">Meditation App</h3>
             <p class="portfolio-text">App</p>
             </div>
         </li>
         <li class="portfolio-item">
+            <div class="image-div">
             <img src="./images/img4.jpg" 
             alt="Taxi-Service" 
             width="360" class="portfolio-images">
+            <p class="portfolio-paragraf-div">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="portfolio-item-div">
             <h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
             </div>
         </li>
         <li class="portfolio-item">
+            <div class="image-div">
             <img src="./images/img5.jpg" 
             alt="Screen-Illustrations" 
             width="360" class="portfolio-images">
+            <p class="portfolio-paragraf-div">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="portfolio-item-div">
             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
             </div>
         </li>
         <li class="portfolio-item">
+            <div class="image-div">
             <img src="./images/img6.jpg" 
             alt="Online-Courses" 
             width="360" class="portfolio-images">
+            <p class="portfolio-paragraf-div">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                App · Exotic Fruit Ecommerce App ·
+                Cloud Storage App</p>
+            </div>
             <div class="portfolio-item-div">
             <h3 class="portfolio-subtitle">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
