--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                  >Web<span class="header-logo-black">Studio</span></a>
                 <ul class="header-menu-list">
                     <li class="header-menu-item">
-                        <a class="header-menu-link" href="./index.html">Studio</a></li>
+                        <a class="header-menu-link current" href="./index.html">Studio</a></li>
                     <li class="header-menu-item">
                         <a class="header-menu-link" href="">Portfolio</a></li>
                     <li class="header-menu-item">
