--- a/index.html
+++ b/index.html
@@ -359,9 +359,12 @@
      </main>
     <footer class="footer">
         <div class="container-footer">
-        <a href="./index.html" class="footer-logo"
+            <a href="./index.html" class="footer-logo"
         >Web<span class="header-logo-white">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
+    <div>
+        <p class="social-media">Social media</p>
     </div>
     </footer>
 </body>
