--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
-                    </li>щз
+                    </li>
                     <li class="our-team-item-icons">
                         <a class="team-link" href="icon-facebook">
                             <svg class="team-icons" widht="16" height="16">
@@ -134,6 +134,7 @@
                             </svg>
                         </a>
                     </li>
+                     </ul>
         </div>
              <li class="team-item">
                 <img src="./images/Tom.jpg" 
@@ -214,8 +215,6 @@
                 
                     </ul>
                 </div>
-
-                </li>
             <li class="team-item">
                 <img src="./images/Daniel.jpg" 
                 alt="Daniel Wilson-UI Designerr"
@@ -365,6 +364,38 @@
     </div>
     <div>
         <p class="social-media">Social media</p>
+        <ul class="footer-list">
+        
+<li class="footer-icons">
+    <a class="footer-link" href="icon-instagram">
+        <svg class="footer-image-icons" widht="24" height="24">
+            <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+    </a>
+</li>
+<li class="footer-icons">
+    <a class="footer-link" href="icon-twitter">
+        <svg class="footer-image-icons" widht="24" height="24">
+            <use href="./images/icons.svg#icon-twitter"></use>
+        </svg>
+    </a>
+</li>
+<li class="footer-icons">
+    <a class="footer-link" href="icon-facebook">
+        <svg class="footer-image-icons" widht="24" height="24">
+            <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+    </a>
+</li>
+<li class="footer-icons">
+    <a class="footer-link" href="icon-linkedin">
+        <svg class="footer-image-icons" widht="24" height="24">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+        </svg>
+    </a>
+</li>
+            </li>
+        </ul>
     </div>
     </footer>
 </body>
