--- a/index.html
+++ b/index.html
@@ -361,9 +361,10 @@
             <a href="./index.html" class="footer-logo"
         >Web<span class="header-logo-white">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div>
         <p class="social-media">Social media</p>
         <ul class="footer-list">
-        
 <li class="footer-icons">
     <a class="footer-link" href="icon-instagram">
         <svg class="footer-image-icons" widht="24" height="24">
