--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
      </main>
     <footer class="footer">
         <div class="container-footer">
+            <div>
             <a href="./index.html" class="footer-logo"
         >Web<span class="header-logo-white">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
@@ -395,6 +396,7 @@
 </li>
             </li>
         </ul>
+    </div>
     </div>
     </footer>
 </body>
