--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -108,28 +108,28 @@
                      <ul class="our-team-item">
                         <li class="our-team-item-icons">
                             <a class="team-link" href="icon-instagram">
-                          <svg class="team-icons" widht="16" height="16">
+                          <svg class="team-icons" width="16" height="16">
                             <use href="./images/icons.svg#icon-instagram"></use>
                           </svg>
                         </a>
                         </li>
                     <li class="our-team-item-icons">
                         <a class="team-link" href="icon-twitter">
-                            <svg class="team-icons" widht="16" height="16">
+                            <svg class="team-icons" width="16" height="16">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="our-team-item-icons">
                         <a class="team-link" href="icon-facebook">
-                            <svg class="team-icons" widht="16" height="16">
+                            <svg class="team-icons" width="16" height="16">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="our-team-item-icons">
                         <a class="team-link" href="icon-linkedin">
-                            <svg class="team-icons" widht="16" height="16">
+                            <svg class="team-icons" width="16" height="16">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
@@ -146,28 +146,28 @@
     <ul class="our-team-item">
         <li class="our-team-item-icons">
             <a class="team-link" href="icon-instagram">
-                <svg class="team-icons" widht="16" height="16">
+                <svg class="team-icons" width="16" height="16">
                     <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
         </li>
         <li class="our-team-item-icons">
             <a class="team-link" href="icon-twitter">
-                <svg class="team-icons" widht="16" height="16">
+                <svg class="team-icons" width="16" height="16">
                     <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
         <li class="our-team-item-icons">
             <a class="team-link" href="icon-facebook">
-                <svg class="team-icons" widht="16" height="16">
+                <svg class="team-icons" width="16" height="16">
                     <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
         <li class="our-team-item-icons">
             <a class="team-link" href="icon-linkedin">
-                <svg class="team-icons" widht="16" height="16">
+                <svg class="team-icons" width="16" height="16">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
@@ -186,28 +186,28 @@
                     <ul class="our-team-item">
                         <li class="our-team-item-icons">
                             <a class="team-link" href="icon-instagram">
-                                <svg class="team-icons" widht="16" height="16">
+                                <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="our-team-item-icons">
                             <a class="team-link" href="icon-twitter">
-                                <svg class="team-icons" widht="16" height="16">
+                                <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="our-team-item-icons">
                             <a class="team-link" href="icon-facebook">
-                                <svg class="team-icons" widht="16" height="16">
+                                <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="our-team-item-icons">
                             <a class="team-link" href="icon-linkedin">
-                                <svg class="team-icons" widht="16" height="16">
+                                <svg class="team-icons" width="16" height="16">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
@@ -225,28 +225,28 @@
                         <ul class="our-team-item">
                             <li class="our-team-item-icons">
                                 <a class="team-link" href="icon-instagram">
-                                    <svg class="team-icons" widht="16" height="16">
+                                    <svg class="team-icons" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="our-team-item-icons">
                                 <a class="team-link" href="icon-twitter">
-                                    <svg class="team-icons" widht="16" height="16">
+                                    <svg class="team-icons" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="our-team-item-icons">
                                 <a class="team-link" href="icon-facebook">
-                                    <svg class="team-icons" widht="16" height="16">
+                                    <svg class="team-icons" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="our-team-item-icons">
                                 <a class="team-link" href="icon-linkedin">
-                                    <svg class="team-icons" widht="16" height="16">
+                                    <svg class="team-icons" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -368,33 +368,32 @@
         <ul class="footer-list">
 <li class="footer-icons">
     <a class="footer-link" href="icon-instagram">
-        <svg class="footer-image-icons" widht="24" height="24">
+        <svg class="footer-image-icons" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram"></use>
         </svg>
     </a>
 </li>
 <li class="footer-icons">
     <a class="footer-link" href="icon-twitter">
-        <svg class="footer-image-icons" widht="24" height="24">
+        <svg class="footer-image-icons" width="24" height="24">
             <use href="./images/icons.svg#icon-twitter"></use>
         </svg>
     </a>
 </li>
 <li class="footer-icons">
     <a class="footer-link" href="icon-facebook">
-        <svg class="footer-image-icons" widht="24" height="24">
+        <svg class="footer-image-icons" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
     </a>
 </li>
 <li class="footer-icons">
     <a class="footer-link" href="icon-linkedin">
-        <svg class="footer-image-icons" widht="24" height="24">
+        <svg class="footer-image-icons" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
     </a>
 </li>
-            </li>
         </ul>
     </div>
     </div>
