--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 
      </main>
     <footer class="footer">
-        <div class="container-footer">
+        <div class="container-footer container">
             <div class="div-container-footer">
             <a href="./index.html" class="footer-logo"
         >Web<span class="header-logo-white">Studio</span></a>
